objects/Custom_Provider__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAZN</fullName>
                </value>
                <value>
                    <fullName>Docomo</fullName>
                </value>
                <value>
                    <fullName>Non-member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Custom Provider</label>
    <listViews>
        <fullName>JP_Provider</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Country_Code__c</columns>
        <columns>Provider_Type__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <label>JP Provider</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Search_by_id</fullName>
        <columns>NAME</columns>
        <columns>Provider_Type__c</columns>
        <columns>Language__c</columns>
        <columns>Country_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Code__c</field>
            <operation>equals</operation>
            <value>DE,CH,AT</value>
        </filters>
        <filters>
            <field>Provider_Type__c</field>
            <operation>equals</operation>
            <value>DAZN,Non-member</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>notEqual</operation>
            <value>ja</value>
        </filters>
        <label>Search by id</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Custom Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>